<resources>
    <string name="app_name">Movies</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_name">movie_name</string>
    <string name="background">background</string>
    <string name="textview">TextView</string>
    <string name="original_title">Original title</string>
    <string name="release_date">Release Date</string>
    <string name="language">Language</string>
    <string name="seasons">Seasons</string>
    <string name="profile_picture">profile_picture</string>
    <string name="real_name">real name</string>
</resources>