<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/actor_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/profile_picture"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/actor_image"
        app:layout_constraintStart_toEndOf="@id/actor_image"
        app:layout_constraintTop_toTopOf="@+id/actor_image"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:id="@+id/actor_in_movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/movie_name"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/actor_real_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>